--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    
   </head>
           <body>
     <h1>Methods of Sex Education Around the World</h1>
@@ -91,6 +90,7 @@
 <div>
   <p>7. Select the country whose government launched a new program called "les ABCD de l’égalité" in 2013:
   <select class="custom-select-sm">
+
     <option value="country1" name="ABCD" id="form-program1">France</option>
       <option value="country2" name="ABCD" id="form-program2">Nigeria</option>
         <option value="country3" name="ABCD" id="form-program3">Spain</option>
@@ -100,7 +100,7 @@
 </select>
 </div>
 
-<div class="form-row align-items-center">
+  <div class="form-group">
   <input class="btn btn-primary" type="submit" value="Submit">
 <input class="btn btn-primary" type="reset" value="Reset">
 </div>
