--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-sm">
+        <section class="col-sm-10">
 
           <p>
             Sex education is a highly debated topic around the world. From its content to the age of its students, the subject varies globally as educators attempt to improve the sexual health of adolescents. This quiz will be based on the information found
@@ -109,7 +109,7 @@
 
         </div>   <!-- column close-->
       </div>   <!-- row close-->
-    </div>  <!-- container close-->
+    </section>  <!-- container close-->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
