--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>Sex Education Quiz</title>
@@ -49,15 +49,16 @@
                 </label>
               </div>
 
-        <p>    <label> 2. What skills did the Netherlands "Long Live Love" package (Lang leve de liefde) aim to teach teenagers? <input type="text" name="Skills" id="form-skills" value="Describe skills here" maxlength="100"></label>
-</p>
+        <div class="form-group">   <label class="form control">
+           2. What skills did the Netherlands "Long Live Love" package (Lang leve de liefde) aim to teach teenagers? <input type="text" name="Skills" id="form-skills" value="Describe skills here" maxlength="100"></label></div>
 
-        <p>  <label>3. In New Zealand, sexuality education is a part of what curriculum that is compulsory for the first ten years of schooling?  <input type="text" name="Skills" id="form-curriculum" value="Type curriculum here" maxlength="100"></label>
-</p>
+           <div class="form-group">   <label class="form control">
+  <label>3. In New Zealand, sexuality education is a part of what curriculum that is compulsory for the first ten years of schooling?  <input type="text" name="Skills" id="form-curriculum" value="Type curriculum here" maxlength="100"></label></div>
 
-<p> 4. A Consultative Council for Health and Human Relations Education was established in December 1980 in Australia. Check the boxes describing the major functions of the council:
   <div class="form-check">
+     4. A Consultative Council for Health and Human Relations Education was established in December 1980 in Australia. Check the boxes describing the major functions of the council:
   <label class="form-check-label">
+
     <input class="form-check-input" type="checkbox" name="functions" value="">
     to advise and recommend the standards for in-service courses for teachers and relevant members of the school community
   </label>
@@ -80,14 +81,16 @@
   </label>
 </div>
 
+  <div class="form-group">   <label class="form control"id="FormControlTextarea2" rows="3">
+      5. In a few short sentences, describe sex education in the United States.
+            </label></div>
 
-            <p>5. In a few short sentences, describe sex education in the United States.</p>
-            <textarea class="form-control" id="FormControlTextarea2" rows="3"></textarea>
+<div class="form-group">   <label class="form control">
 
-              <label> 6. According to the 1999 study by the Guttmacher Institute, what grades in the U.S. covered sex education? <input type="text" name="Grades" id="form-grades" value="Enter a range of grades" maxlength="50"></label>
+               6. According to the 1999 study by the Guttmacher Institute, what grades in the U.S. covered sex education? <input type="text" name="Grades" id="form-grades" value="Enter a range of grades" maxlength="50"></label></div>
 
 
-<div>
+<div class="select">   <label class="form control"id="FormControlTextarea2" rows="3">
   <p>7. Select the country whose government launched a new program called "les ABCD de l’égalité" in 2013:
   <select class="custom-select-sm">
 
