now its finally on pages and not master

--- a/index.html
+++ b/index.html
@@ -81,12 +81,10 @@
   </label>
 </div>
 
-  <div class="form-group">   <label class="form control"id="FormControlTextarea2" rows="3">
-      5. In a few short sentences, describe sex education in the United States.
-            </label></div>
+  <div class="form-group" rows="4"> <label for="FormControlTextarea1"> 5. In a few short sentences, describe sex education in the United States. </label>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea></div>
 
 <div class="form-group">   <label class="form control">
-
                6. According to the 1999 study by the Guttmacher Institute, what grades in the U.S. covered sex education? <input type="text" name="Grades" id="form-grades" value="Enter a range of grades" maxlength="50"></label></div>
 
 
