--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
            2. What skills did the Netherlands "Long Live Love" package (Lang leve de liefde) aim to teach teenagers? <input type="text" name="Skills" id="form-skills" value="Describe skills here" maxlength="100"></label></div>
 
            <div class="form-group">   <label class="form control">
-  <label>3. In New Zealand, sexuality education is a part of what curriculum that is compulsory for the first ten years of schooling?  <input type="text" name="Skills" id="form-curriculum" value="Type curriculum here" maxlength="100"></label></div>
+  3. In New Zealand, sexuality education is a part of what curriculum that is compulsory for the first ten years of schooling?  <input type="text" name="Skills" id="form-curriculum" value="Type curriculum here" maxlength="100"> </label> </div>
 
   <div class="form-check">
      4. A Consultative Council for Health and Human Relations Education was established in December 1980 in Australia. Check the boxes describing the major functions of the council:
@@ -81,15 +81,16 @@
   </label>
 </div>
 
-  <div class="form-group" rows="4"> <label for="FormControlTextarea1"> 5. In a few short sentences, describe sex education in the United States. </label>
-    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea></div>
+  <div class="form-group"> <label for="FormControlTextarea1"> 5. In a few short sentences, describe sex education in the United States.
+    <textarea class="form-control" id="textarea" rows="3"></textarea></label></div>
 
 <div class="form-group">   <label class="form control">
                6. According to the 1999 study by the Guttmacher Institute, what grades in the U.S. covered sex education? <input type="text" name="Grades" id="form-grades" value="Enter a range of grades" maxlength="50"></label></div>
 
 
-<div class="select">   <label class="form control"id="FormControlTextarea2" rows="3">
-  <p>7. Select the country whose government launched a new program called "les ABCD de l’égalité" in 2013:
+<div class="select" id="FormControlTextarea2">
+   <label class="form control">
+7. Select the country whose government launched a new program called "les ABCD de l’égalité" in 2013:
   <select class="custom-select-sm">
 
     <option value="country1" name="ABCD" id="form-program1">France</option>
@@ -98,6 +99,7 @@
           <option value="country4" name="ABCD" id="form-program4">India</option>
             <option value="country5" name="ABCD" id="form-program5">China</option>
               <option value="country6" name="ABCD" id="form-program6">Jamaica</option>
+            </label>
 </select>
 </div>
 
