--- a/index.html
+++ b/index.html
@@ -104,9 +104,10 @@
 </div>
 
   <div class="form-group">
+    <label class="form control">
   <input class="btn btn-primary" type="submit" value="Submit">
 <input class="btn btn-primary" type="reset" value="Reset">
-</div>
+</label></div>
 
           </form>
 
